# spot_ros2

./: .gitmodules  README.md  error_message_22_10.txt  output_cartographer.txt
Dockerfiles/: Agent_Ollama_Dockerfile  Cartographer_Dockerfile  Navigation_Dockerfile  Spot_Description_Dockerfile  Spot_Dockerfile  Velodyne_Dockerfile  Webots_Dockerfile
colcon_ws/src/velodyne_description/: CMakeLists.txt  package.xml
config/: sim_config.rviz  spot_config.rviz
docker_build/: docker_build_agent.sh  docker_build_carto.sh  docker_build_description.sh  docker_build_nav2.sh  docker_build_spot.sh  docker_build_velo.sh  docker_build_webots.sh
docker_run/: config.sh  docker_exec_velodyne.sh  docker_run_agent.sh  docker_run_all_velodyne.sh  docker_run_cartographer.sh  docker_run_description.sh  docker_run_llm.sh  docker_run_localization.sh  docker_run_nav2.sh  docker_run_point_time.sh  docker_run_save_map.sh  docker_run_sim_nav2.sh  docker_run_spot.sh  docker_run_type.sh  docker_run_velodyne.sh  docker_run_velodyne_point.sh  docker_run_webots.sh  start_spot.sh
entrypoint_scripts/: agent_entry.sh  carto_points_time.sh  cartographer_entry.sh  description_entry.sh  llm_entry.sh  localization_entry.sh  navigation_entry.sh  save_map.sh  spot_driver_entry.sh  type_entry.sh  velodyne_decoder_entry.sh  velodyne_encoder_entry.sh  velodyne_node_entry.sh  velodyne_points_entry.sh
files_to_change/: VLP16-velodyne_transform_node-params.yaml  accessories.urdf.xacro  spot.urdf.xacro  spot_macro.xacro
map/: halle_22_oct.pbstream  halle_22_oct.pgm  halle_22_oct.yaml  my_map.pgm  (+36 more)
(+84 files in other folders)
