<?xml version="1.0"?>
<package format="3">
  <name>velodyne_description</name>
  <version>1.0.9</version>
  <description>URDF and meshes describing Velodyne laser scanners.</description>

  <license>BSD</license>

  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <author>Kevin Hallenbeck</author>

  <url type="website">http://wiki.ros.org/velodyne_description</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/velodyne_simulator</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/velodyne_simulator/issues</url>

  <!-- ROS 2 build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Optional but common for description packages used in launch files -->
  <!-- <exec_depend>robot_state_publisher</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

